--- a/T3D/T3D/T3D.vcxproj
+++ b/T3D/T3D/T3D.vcxproj
@@ -15,9 +15,11 @@
     <ClCompile Include="Billboard.cpp" />
     <ClCompile Include="Bone.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Clock.cpp" />
     <ClCompile Include="Colour.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="Cube.cpp" />
+    <ClCompile Include="Cylinder.cpp" />
     <ClCompile Include="DiagMessageTask.cpp" />
     <ClCompile Include="DrawClock.cpp" />
     <ClCompile Include="DrawTask.cpp" />
@@ -63,6 +65,7 @@
     <ClCompile Include="SweepPath.cpp" />
     <ClCompile Include="T3DApplication.cpp" />
     <ClCompile Include="T3DTest.cpp" />
+    <ClCompile Include="Tablet.cpp" />
     <ClCompile Include="Task.cpp" />
     <ClCompile Include="Terrain.cpp" />
     <ClCompile Include="TerrainFollower.cpp" />
@@ -76,9 +79,11 @@
     <ClInclude Include="Billboard.h" />
     <ClInclude Include="Bone.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Clock.h" />
     <ClInclude Include="Colour.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="Cube.h" />
+    <ClInclude Include="Cylinder.h" />
     <ClInclude Include="DiagMessageTask.h" />
     <ClInclude Include="DrawClock.h" />
     <ClInclude Include="DrawTask.h" />
@@ -124,6 +129,7 @@
     <ClInclude Include="SweepPath.h" />
     <ClInclude Include="T3DApplication.h" />
     <ClInclude Include="T3DTest.h" />
+    <ClInclude Include="Tablet.h" />
     <ClInclude Include="Task.h" />
     <ClInclude Include="Terrain.h" />
     <ClInclude Include="TerrainFollower.h" />
