--- a/T3D/T3D/T3D.vcxproj
+++ b/T3D/T3D/T3D.vcxproj
@@ -16,6 +16,7 @@
     <ClCompile Include="Bone.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Clock.cpp" />
+    <ClCompile Include="ClockBase.cpp" />
     <ClCompile Include="Colour.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="Cube.cpp" />
@@ -28,6 +29,7 @@
     <ClCompile Include="Font.cpp" />
     <ClCompile Include="FontCache.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="Glass.cpp" />
     <ClCompile Include="GLRenderer.cpp" />
     <ClCompile Include="GLShader.cpp" />
     <ClCompile Include="GLTestApplication.cpp" />
@@ -67,6 +69,7 @@
     <ClCompile Include="T3DTest.cpp" />
     <ClCompile Include="Tablet.cpp" />
     <ClCompile Include="Task.cpp" />
+    <ClCompile Include="TCube.cpp" />
     <ClCompile Include="Terrain.cpp" />
     <ClCompile Include="TerrainFollower.cpp" />
     <ClCompile Include="Texture.cpp" />
@@ -80,6 +83,7 @@
     <ClInclude Include="Bone.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Clock.h" />
+    <ClInclude Include="ClockBase.h" />
     <ClInclude Include="Colour.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="Cube.h" />
@@ -92,6 +96,7 @@
     <ClInclude Include="Font.h" />
     <ClInclude Include="FontCache.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Glass.h" />
     <ClInclude Include="GLRenderer.h" />
     <ClInclude Include="GLShader.h" />
     <ClInclude Include="GLTestApplication.h" />
@@ -131,6 +136,7 @@
     <ClInclude Include="T3DTest.h" />
     <ClInclude Include="Tablet.h" />
     <ClInclude Include="Task.h" />
+    <ClInclude Include="TCube.h" />
     <ClInclude Include="Terrain.h" />
     <ClInclude Include="TerrainFollower.h" />
     <ClInclude Include="Texture.h" />
