--- a/T3D/T3D/T3D.vcxproj
+++ b/T3D/T3D/T3D.vcxproj
@@ -16,6 +16,7 @@
     <ClCompile Include="Bone.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Clock.cpp" />
+    <ClCompile Include="ClockAnimation.cpp" />
     <ClCompile Include="ClockBase.cpp" />
     <ClCompile Include="Colour.cpp" />
     <ClCompile Include="Component.cpp" />
@@ -83,6 +84,7 @@
     <ClInclude Include="Bone.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Clock.h" />
+    <ClInclude Include="ClockAnimation.h" />
     <ClInclude Include="ClockBase.h" />
     <ClInclude Include="Colour.h" />
     <ClInclude Include="Component.h" />
